--- a/transformlayout.html
+++ b/transformlayout.html
@@ -17,7 +17,7 @@
         <div id="item">
           
             <div class="box">
-                <img src="images/2.png" alt="">
+                <img src="images/blog1.jpg" alt="">
                 <div class="icon">
                     <a href=""><i class="fa-brands fa-instagram"></i></a>
                     <a href=""><i class="fa-brands fa-twitter"></i></a>
@@ -27,7 +27,7 @@
         <div id="item">
            
             <div class="box">
-                <img src="images/3.png" alt="">
+                <img src="images/blog2.jpg" alt="">
                 <div class="icon">
                     <a href=""><i class="fa-brands fa-instagram"></i></a>
                     <a href=""><i class="fa-brands fa-twitter"></i></a>
