--- a/transformlayout.html
+++ b/transformlayout.html
@@ -37,7 +37,7 @@
         <div id="item">
           
             <div class="box">
-                <img src="images/4.png" alt="">
+                <img src="images/studyImg.jpg" alt="">
                 <div class="icon">
                     <a href=""><i class="fa-brands fa-instagram"></i></a>
                     <a href=""><i class="fa-brands fa-twitter"></i></a>
