--- a/transformlayout.html
+++ b/transformlayout.html
@@ -57,7 +57,7 @@
         <div id="item">
             
             <div class="box">
-                <img src="images/3.png" alt="">
+                <img src="images/visitor.jpg" alt="">
                 <div class="icon">
                     <a href=""><i class="fa-brands fa-instagram"></i></a>
                     <a href=""><i class="fa-brands fa-twitter"></i></a>
@@ -97,7 +97,7 @@
         <div id="item">
           
             <div class="box">
-                <img src="images/4.png" alt="">
+                <img src="images/studyImg.jpg" alt="">
                 <div class="icon">
                     <a href=""><i class="fa-brands fa-instagram"></i></a>
                     <a href=""><i class="fa-brands fa-twitter"></i></a>
